Fixed issue with styling causing overflow to be hidden

--- a/frontend/src/styling/Signup.css
+++ b/frontend/src/styling/Signup.css
@@ -7,7 +7,6 @@ body {
        -moz-user-select: none;
         -ms-user-select: none;
             user-select: none;
-    overflow-y: hidden;
     
     background: #dde5f4;
     height: 100vh;
